tests/transpiler/x/clj/avg_builtin.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:34Z
(ns main)
(defn -main [] (println (avg [1 2 3])))
(-main)
